--- a/.github/workflows/node.js_ci.yml
+++ b/.github/workflows/node.js_ci.yml
@@ -2,19 +2,11 @@ name: Node.js CI
 
 on:
   push:
-    branches: [ "main" ]
+    branches: [ "dev" ]
   pull_request:
-    branches: [ "main" ]
+    branches: [ "dev" ]
 
 jobs:
-  install_pnpm:
-    runs-on: ubuntu-latest
-
-    steps:
-      - uses: pnpm/action-setup@v2
-        with:
-          version: 8
-
   build:
 
     runs-on: ubuntu-latest
@@ -25,6 +17,9 @@ jobs:
         # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
     steps:
+    - uses: pnpm/action-setup@v2
+      with:
+          version: 8
     - uses: actions/checkout@v3
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v3
