--- a/.github/workflows/deploy_ghpages_dev_nextjs.yml
+++ b/.github/workflows/deploy_ghpages_dev_nextjs.yml
@@ -31,6 +31,12 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+      
+      - name: Install pnpm
+        uses: pnpm/action-setup@v2
+        with:
+          version: 8
+      
       - name: Detect package manager
         id: detect-package-manager
         run: |
