--- a/.github/workflows/node.js_ci.yml
+++ b/.github/workflows/node.js_ci.yml
@@ -26,6 +26,7 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'pnpm'
+    - run: cd frontend
     - run: npm install -g pnpm
     - run: pnpm install
     - run: pnpm run build --if-present
