--- a/.github/workflows/deploy_ghpages_dev_nextjs.yml
+++ b/.github/workflows/deploy_ghpages_dev_nextjs.yml
@@ -28,9 +28,10 @@ jobs:
   # Build job
   build:
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: ./frontend
     steps:
-      - name: Go to Frontend Directory
-        run: cd frontend
       - name: Checkout
         uses: actions/checkout@v4
       
@@ -78,7 +79,7 @@ jobs:
         uses: actions/cache@v3
         with:
           path: |
-            .next/cache
+            .frontend/next/cache
           # Generate a new cache whenever packages or source files change.
           key: ${{ runner.os }}-nextjs-${{ hashFiles('**/package-lock.json', '**/yarn.lock') }}-${{ hashFiles('**.[jt]s', '**.[jt]sx') }}
           # If source files changed but packages didn't, rebuild from a prior cache.
@@ -93,7 +94,7 @@ jobs:
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          path: ./out
+          path: ./frontend/out
 
   # Deployment job
   deploy:
