--- a/.github/workflows/node.js_ci.yml
+++ b/.github/workflows/node.js_ci.yml
@@ -8,7 +8,9 @@ on:
 
 jobs:
   build:
-
+    defaults:
+      run:
+        working-directory: ./backend
     runs-on: ubuntu-latest
 
     strategy:
@@ -26,7 +28,6 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'pnpm'
-    - run: cd frontend
     - run: npm install -g pnpm
     - run: pnpm install
     - run: pnpm run build --if-present
