--- a/.github/workflows/node.js_ci.yml
+++ b/.github/workflows/node.js_ci.yml
@@ -28,6 +28,7 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'pnpm'
+        path: ./backend
     - run: npm install -g pnpm
     - run: pnpm install
     - run: pnpm run build --if-present
