--- a/.github/workflows/deploy_ghpages_dev_nextjs.yml
+++ b/.github/workflows/deploy_ghpages_dev_nextjs.yml
@@ -47,16 +47,19 @@ jobs:
             echo "manager=pnpm" >> $GITHUB_OUTPUT
             echo "command=install" >> $GITHUB_OUTPUT
             echo "runner=pnpm" >> $GITHUB_OUTPUT
+            echo "dependency_file=pnpm-lock.yaml" >> $GITHUB_OUTPUT
             exit 0
           elif [ -f "${{ github.workspace }}/frontend/yarn.lock" ]; then
             echo "manager=yarn" >> $GITHUB_OUTPUT
             echo "command=install" >> $GITHUB_OUTPUT
             echo "runner=yarn" >> $GITHUB_OUTPUT
+            echo "dependency_file=yarn.lock" >> $GITHUB_OUTPUT
             exit 0
           elif [ -f "${{ github.workspace }}/frontend/package.json" ]; then
             echo "manager=npm" >> $GITHUB_OUTPUT
             echo "command=ci" >> $GITHUB_OUTPUT
             echo "runner=npx --no-install" >> $GITHUB_OUTPUT
+            echo "dependency_file=package.json" >> $GITHUB_OUTPUT
             exit 0
           else
             echo "Unable to determine package manager"
@@ -67,6 +70,7 @@ jobs:
         with:
           node-version: "20"
           cache: ${{ steps.detect-package-manager.outputs.manager }}
+          cache-dependency-path: ./frontend/${{steps.detect-package-manager.outputs.dependency_file}}
       - name: Setup Pages
         uses: actions/configure-pages@v4
         with:
